# review_classifier_BERT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  launch.sh  lunch.sh  main.py  pyproject.toml  requirements.txt
app/: api.py  request.py  schemas.py
data/: train.csv  validation.csv  womens_clothing_ecommerce_reviews_balanced.csv
notebooks/: detect_bias.ipynb  dummy_model.ipynb  exploratory_data_analysis.ipynb
output_data/sentiment/: test.tsv  validation.tsv
review_cl/: data_prep.py  inference.py  models.py  process.py  utils.py
streamlit_app/: model_dash.py  utils.py
