[tool.poetry]
name = "RoBERT_review"
version = "0.0.1"
description = ""
authors = ["TERBOUCHE Hacene"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = {version="^2.0.18", extras=["gc"]}
torch = "^1.8.1" # +cu111
torchvision = "^0.9.1" # +cu111
torchaudio = "^0.8.1"
pytorch-lightning = "1.3.8"
poethepoet = "^0.10.0"
sklearn = "^0.0"
pandas = "^1.2.4"
comet-ml = "^3.9.1"
pandasql = "^0.7.3"
nltk = "^3.6.2"



[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {version="^5.5", extras=["toml"] }
dvc = {version="^2.0.18", extras=["ssh", "gc"]}
pytest = "^6.2.3"
jupyter = "^1.0.0"
pre-commit = "^2.12.1"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
lightning-bolts = "^0.3.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.0+cu111 torchvision==0.9.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html"

[tool.black]
# Black formatter configuration
line-length = 89
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.sublime-workspace
  | .idea
  | .venv
  | .vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''